--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
    
     <form action="">
         <p>
-            <input type="text">Imię</input>
-            <input type="text">Nazwisko</input>
+            <!-- aby dodać tekst do inputa używamy value -->
+            <!-- aby dodać tekst obok inputa, używamy legend -->
+            <input type="text" value="Imię">
+            <input type="text" value="Nazwisko">
             <input type="submit" value="Wyślij">
         </p>
     </form>
