--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <fieldset>
             <legend>Twoje dane:</legend><br>
             <label for="fname">Imię: </label><br>
-            <input type="text" value=""><br><br>
+            <input type="text" value="" id="fname"><br><br>
             <label for="lname">Nazwisko: </label><br>
-            <input type="text" value=""><br><br>
+            <input type="text" value="" id="lname"><br><br>
             <input type="submit" value="Wyślij">
         </fieldset>
     </form>
